<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rohanrodrigues.basicmathquiz.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/problem_header"
        android:padding="30dp"
        android:textSize="20sp"
        android:textColor="#403C47"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:layout_gravity="left"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problems_attempt"
            android:id = "@+id/problem_attempt"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/questions_wrong"
            android:id = "@+id/wrongQuestions"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/addition"
            android:id = "@+id/additionButton"
            android:textSize="11.5dp"/>

        <Button
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/subtraction"
            android:id = "@+id/subtractButton"
            android:textSize="11.5dp"/>

        <Button
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/multiplication"
            android:id = "@+id/multButton"
            android:textSize="11.5dp"/>

        <Button
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:id = "@+id/divisButton"
            android:textSize="11.5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/problem_main"
        android:text="@string/problem_main"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:padding="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/trueValue"
            android:id="@+id/true_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/falseValue"
            android:id="@+id/false_button"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_result"
        android:id="@+id/answerResult"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:padding="40dp"/>
</LinearLayout>
